# learnyouahaskell_ptbr

./: .gitignore  Main.hs  README.md  Static.hs  build.hs  chapters_foot.md  faq.md  for-a-few-monads-more.md  haskell-reader.cabal  input-and-output.md  introduction.md  modules.md  types-and-typeclasses.md  welcome.md
docs/: a-fistful-of-monads.html  a-fistful-of-monads.md  chapters.html  chapters_head.md  faq.html  for-a-few-monads-more.html  for-a-few-monads-more.md  functionally-solving-problems.html  functionally-solving-problems.md  functors-applicative-functors-and-monoids.html  functors-applicative-functors-and-monoids.md  higher-order-functions.html  higher-order-functions.md  index.html  input-and-output.html  introduction.html  making-our-own-types-and-typeclasses.html  making-our-own-types-and-typeclasses.md  modules.html  recursion.html  recursion.md  starting-out.html  starting-out.md  syntax-in-functions.html  syntax-in-functions.md  types-and-typeclasses.html  zippers.html  zippers.md
site/: a-fistful-of-monads.html  chapters_foot.html  chapters_head.html  faq.html  functors-applicative-functors-and-monoids.html  io_temp.html  monads_more_temp.html  starting-out.html  syntax-in-functions.html  zippers.html
src/: Files.hs  Markdown.hs  Templates.hs
