cabal-version:      2.4
name:               haskell-reader
version:            0.1.0.0
summary:            Um leitor moderno de documentação Haskell em Markdown.
author:             wendrxw
maintainer:         developer.wendrew@gmail.com

executable haskell-reader
    main-is:          Main.hs
    other-modules:    Files, Markdown, Templates
    hs-source-dirs:   ., src
    build-depends:    base >= 4.14 && < 5,
                      scotty,
                      text,
                      pandoc,
                      directory,
                      filepath,
                      http-types,
                      transformers
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010

executable static-gen
    main-is:          Static.hs
    other-modules:    Files, Markdown, Templates
    hs-source-dirs:   ., src
    build-depends:    base >= 4.14 && < 5,
                      text,
                      pandoc,
                      directory,
                      filepath,
                      transformers
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
